[package]
name = "panorama"
version = "0.1.0"
edition = "2021"

[dependencies]
rust_utils = { path = "../rust_utils" }
anyhow = "1.0"
once_cell = "1.18"

# log4rs
log = "0.4"
log4rs = "1.3.0"

# sqlite
rusqlite = "0.30"

# web server
axum = "0.6"
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
