[package]
name = "panorama_c"
version = "0.1.0"
edition = "2021"

[dependencies]
rust_utils = { path = "../../rust_utils" }
anyhow = "1.0"
once_cell = "1.18"
tokio = { version = "1.0", features = ["full"] } # web server、 web socket

# log4rs
log = "0.4"
log4rs = "1.3.0"

# web socket
tungstenite = "0.20.0"
futures = "0.3"
futures-util = "0.3"
tokio-tungstenite = "0.17"
url = "2.4"
