[package]
name = "panorama_s"
version = "0.1.0"
edition = "2021"

[dependencies]
rust_utils = { path = "../../rust_utils" }
anyhow = "1.0"
once_cell = "1.18"
tokio = { version = "1.0", features = ["full"] } # web serverã€ web socket

# log4rs
log = "0.4"
log4rs = "1.3.0"

# sqlite
rusqlite = "0.30"

# web server
axum = { version = "0.6" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

# web socket
tungstenite = "0.20.0"
futures-util = "0.3.0"
